# helix-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .trivyignore  README.md  conftest.py  pyproject.toml
docs/: README.md  (+2 more)
services/audit-backup-worker/: README.md  pyproject.toml
services/audit-backup-worker/src/audit_backup_worker/: __init__.py  __main__.py  main.py  serialization.py  settings.py  worker.py
services/audit-backup-worker/tests/: test_serialization.py  test_worker_integration.py  test_worker_unit.py
services/control-plane/: Dockerfile  README.md  pyproject.toml
services/control-plane/src/control_plane/: __init__.py  app.py  approval_metrics.py  approval_timeout_sweep.py  audit.py  aux_model_adapter.py  bootstrap_admin.py  catalog_seed.py  curation_worker.py  domain_research.py  encrypted_secret_store.py  eval_engine.py  eval_engine_live.py  eval_worker.py  failure_report.py  feedback_consumer.py  main.py  mcp_auth.py  mcp_oauth.py  mcp_oauth_refresh.py  mcp_oauth_refresh_lock.py  mcp_probe.py  memory_consolidator.py  orphan_sweep.py  platform_embedding_config.py  platform_mcp_pool.py  platform_secrets.py  platform_tool_budget_config.py  prompt_render.py  run_queue_worker.py  runtime.py  scheduler.py  seed_keycloak_secret.py  settings.py  skill_activity.py  skill_attribution.py  skill_curator.py  skill_distiller.py  skill_evolution.py  skill_evolution_assembly.py  (+18 more)
services/control-plane/src/control_plane/api/: __init__.py  _artifact_mime.py  _authz.py  _image_sanitize.py  _quota_admission.py  _session_title.py  _skill_github.py  _skill_moderation.py  _skill_runtime.py  _skill_zip.py  _user_scope.py  agent_schema.py  agent_templates.py  agent_users.py  agents.py  api_keys.py  approvals.py  artifacts.py  audit.py  billing_admin.py  conversations.py  curation.py  eval_runs.py  feedback.py  health.py  knowledge.py  mcp_catalog.py  mcp_oauth_api.py  mcp_servers.py  me.py  member_ops.py  members.py  memory.py  metrics.py  model_catalog.py  plan.py  platform_billing_config.py  platform_config.py  platform_embedding_config.py  platform_skills.py  (+19 more)
services/control-plane/src/control_plane/auth/: __init__.py  api_key_verifier.py  errors.py  jwt_verifier.py  middleware.py  mtls.py  rbac.py  system_admin.py  tenant_roles.py
services/control-plane/tests/: agent_fixtures.py  auth_fixtures.py  conftest.py  test_abac.py  test_admin_api.py  test_agent_schema_api.py  test_agent_templates_api.py  test_agent_users_api.py  test_agents_abac.py  test_agents_api.py  test_agents_fork.py  test_agents_run_for_user.py  test_api_key_verifier.py  test_app_factory.py  test_approval_metrics.py  test_approval_timeout_sweep.py  test_approvals_api.py  test_artifacts_api.py  test_audit_api.py  test_audit_context_middleware.py  test_audit_mcp_server_types.py  test_auth_middleware.py  test_auth_middleware_mtls.py  test_auth_middleware_system_admin.py  test_backpressure_middleware.py  test_billing_admin_api.py  test_bootstrap_admin.py  test_bootstrap_grant.py  test_cancellation_middleware.py  test_catalog_seed.py  test_checkpointer_wiring.py  test_collect_used_providers_o12.py  test_conversations_api.py  test_credentials_mode_switch_gate.py  test_credentials_view_endpoint.py  test_curation_api.py  test_curation_worker.py  test_deadline_middleware.py  test_domain_research.py  test_dynamic_resolver.py  (+122 more)
services/credential-proxy/: Dockerfile  README.md  pyproject.toml
services/credential-proxy/src/credential_proxy/: __init__.py  allowlist.py  app.py  audit.py  cache.py  domain.py  egress_proxy.py  forwarder.py  main.py  proxy.py  settings.py
services/credential-proxy/tests/: test_credential_proxy_unit.py  test_egress_proxy.py
services/event-log-archive-job/: README.md  pyproject.toml
services/event-log-archive-job/src/event_log_archive_job/: __init__.py  __main__.py  job.py  main.py  settings.py
services/event-log-archive-job/tests/: test_archive_job_integration.py  test_archive_job_unit.py
services/orchestrator/: README.md  pyproject.toml
services/orchestrator/src/orchestrator/: __init__.py  agent_factory.py  errors.py  llm.py  middleware_assembly.py  multimodal.py  output_judge.py  resume.py  run_retry.py  runner.py  sse.py  state.py
services/orchestrator/tests/: test_action_screen_wiring.py  test_agent_factory.py  test_agent_factory_bound_skills.py  test_agent_factory_current_date.py  test_agent_factory_skills.py  test_agent_factory_spotlight.py  test_agent_factory_tool_use_enforcement.py  test_approval_gate.py  test_artifact_tools.py  test_bash_tool.py  test_cancellation_integration.py  test_context_compressor.py  test_context_compressor_integration.py  test_dashscope_rerank.py  test_deferred_tool_promotion.py  test_effort_escalation.py  test_egress_binding.py  test_embedder.py  test_error_classifier.py  test_exec_python_tool.py  test_file_ops.py  test_find_tools.py  test_graph_runner.py  test_grounding.py  test_http_tool.py  test_knowledge_tool.py  test_llm_provider_anthropic.py  test_llm_provider_openai.py  test_llm_provider_openai_compatible.py  test_llm_rate_limit.py  test_llm_router.py  test_llm_router_oauth.py  test_mcp_tool.py  test_memory_cache_efficiency.py  test_memory_frozen_snapshot.py  test_memory_nodes.py  test_memory_recall_mmr.py  test_memory_recall_rerank.py  test_memory_reconcile.py  test_middleware_assembly.py  (+61 more)
services/retention-cleanup-job/: README.md  pyproject.toml
services/retention-cleanup-job/src/retention_cleanup_job/: __init__.py  __main__.py  job.py  main.py  settings.py
services/retention-cleanup-job/tests/: test_job_integration.py  test_job_unit.py
services/sandbox-supervisor/: README.md  pyproject.toml
services/sandbox-supervisor/src/sandbox_supervisor/: __init__.py  app.py  docker_client.py  domain.py  main.py  pool.py  quota_enforcer.py  reaper.py  runner_link.py  schemas.py  seccomp.py  settings.py  store.py  supervisor.py  trace_middleware.py
services/sandbox-supervisor/tests/: test_egress_sitecustomize.py  test_quota_enforcer.py  test_seccomp.py  test_supervisor_integration.py  test_supervisor_unit.py  test_trace_middleware.py
(+857 files in other folders)
