[project]
name = "helix-agent"
version = "0.0.0"
description = "Helix-Agent — multi-tenant enterprise Agent execution engine (workspace root)"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "joneqian", email = "qian.qing0926@gmail.com" },
]
dependencies = [
    "helix-agent-common",
    "helix-agent-persistence",
    "helix-agent-protocol",
    "helix-agent-runtime",
    "helix-agent-audit-backup-worker",
    "helix-agent-control-plane",
    "helix-agent-orchestrator",
    "helix-agent-retention-cleanup-job",
    "helix-agent-sandbox-supervisor",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pre-commit>=4.0.0",
    "testcontainers[postgres]>=4.9.0",
    "vcrpy>=7.0.0",
    # Stream A.10 — tools/tls/check_tls_config.py parses environments/*.yaml.
    "pyyaml>=6.0,<7",
    "types-pyyaml>=6.0,<7",
    # Stream B.1 — FastAPI ASGI test client.
    "httpx>=0.27,<1",
]

[tool.uv.workspace]
members = [
    "packages/helix-common",
    "packages/helix-persistence",
    "packages/helix-protocol",
    "packages/helix-runtime",
    "services/audit-backup-worker",
    "services/control-plane",
    "services/orchestrator",
    "services/retention-cleanup-job",
    "services/sandbox-supervisor",
]

[tool.uv.sources]
helix-agent-common = { workspace = true }
helix-agent-persistence = { workspace = true }
helix-agent-protocol = { workspace = true }
helix-agent-runtime = { workspace = true }
helix-agent-audit-backup-worker = { workspace = true }
helix-agent-control-plane = { workspace = true }
helix-agent-orchestrator = { workspace = true }
helix-agent-retention-cleanup-job = { workspace = true }
helix-agent-sandbox-supervisor = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["packages/*/src", "services/*/src", "tools/*/src", "tests"]
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"**/tests/**/*.py" = ["S101", "S105", "S106"]
"**/test_*.py" = ["S101", "S105", "S106"]
"**/conftest.py" = ["S101"]
# Audit action enum values legitimately contain words like "secret"/"token";
# they are public identifiers, not actual credentials.
"packages/helix-protocol/src/helix_agent/protocol/audit.py" = ["S105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/packages/helix-common/src:$MYPY_CONFIG_FILE_DIR/packages/helix-persistence/src:$MYPY_CONFIG_FILE_DIR/packages/helix-protocol/src:$MYPY_CONFIG_FILE_DIR/packages/helix-runtime/src:$MYPY_CONFIG_FILE_DIR/services/audit-backup-worker/src:$MYPY_CONFIG_FILE_DIR/services/control-plane/src:$MYPY_CONFIG_FILE_DIR/services/orchestrator/src:$MYPY_CONFIG_FILE_DIR/services/retention-cleanup-job/src:$MYPY_CONFIG_FILE_DIR/services/sandbox-supervisor/src"

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiobotocore.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "packages/*/tests", "services/*/tests", "tools/*"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"
markers = [
    "integration: marks integration tests (require external services)",
    "e2e: marks end-to-end tests (full docker-compose stack)",
]
