[project]
name = "helix-agent-control-plane"
version = "0.0.0"
description = "Helix-Agent Control Plane — FastAPI API surface (Stream B)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "joneqian", email = "qian.qing0926@gmail.com" },
]
dependencies = [
    "helix-agent-common",
    "helix-agent-persistence",
    "helix-agent-protocol",
    "helix-agent-runtime",
    # Stream B.1 — FastAPI + Pydantic v2 + uvicorn.
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy[asyncio]>=2.0.30,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/control_plane"]
