[project]
name = "helix-agent-control-plane"
version = "0.0.0"
description = "Helix-Agent Control Plane — FastAPI API surface (Stream B)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "joneqian", email = "qian.qing0926@gmail.com" },
]
dependencies = [
    "helix-agent-common",
    "helix-agent-persistence",
    "helix-agent-protocol",
    "helix-agent-runtime",
    # Stream B.1 — FastAPI + Pydantic v2 + uvicorn.
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy[asyncio]>=2.0.30,<3",
    # Stream B.4 — YAML loader + Jinja2 template rendering.
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
    # Stream C.1 — OIDC + RS256 JWT verification.
    "pyjwt[crypto]>=2.9,<3",
    # ``>=46.0.7`` 跳过 CVE-2026-26007 / 34073 / 39892（pip-audit 已要求）。
    "cryptography>=46.0.7,<47",
    "httpx>=0.27,<1",
    # Stream C.3 — Argon2id hashing for API key secrets (OWASP-recommended).
    "argon2-cffi>=23.1,<26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/control_plane"]
