[project]
name = "helix-agent-control-plane"
version = "0.0.0"
description = "Helix-Agent Control Plane — FastAPI API surface (Stream B)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "joneqian", email = "qian.qing0926@gmail.com" },
]
dependencies = [
    "helix-agent-common",
    "helix-agent-persistence",
    "helix-agent-protocol",
    "helix-agent-runtime",
    # In-process monolith (STREAM-E-DESIGN § 2.6): the control-plane runs
    # the orchestrator as a library — agent graphs execute as background
    # asyncio tasks in this process, not a separate service.
    "helix-agent-orchestrator",
    # Stream B.1 — FastAPI + Pydantic v2 + uvicorn.
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy[asyncio]>=2.0.30,<3",
    # Stream B.4 — YAML loader + Jinja2 template rendering.
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
    # Stream C.1 — OIDC + RS256 JWT verification.
    "pyjwt[crypto]>=2.9,<3",
    # ``>=46.0.7`` 跳过 CVE-2026-26007 / 34073 / 39892（pip-audit 已要求）。
    "cryptography>=46.0.7,<47",
    "httpx>=0.27,<1",
    # Stream C.3 — Argon2id hashing for API key secrets (OWASP-recommended).
    "argon2-cffi>=23.1,<26",
    # Stream C.5 — Redis client for the quota / rate-limit engine
    # (subsystems/16 § 3.2). ``redis-py>=5.0`` ships asyncio support
    # natively under ``redis.asyncio``.
    "redis>=5.0,<7",
    # Stream J.5 — knowledge-base document parsing. pymupdf4llm gives
    # high-quality Markdown (with headings) for PDFs; MarkItDown is the
    # fallback + handles office formats (docx / pptx / xlsx).
    "pymupdf4llm>=0.0.17,<1",
    "pymupdf>=1.24,<2",
    "markitdown[docx,pptx,xlsx,pdf]>=0.1,<1",
    # Stream J.5 — knowledge chunking: markdown-it parses the Markdown
    # block structure; tiktoken counts tokens for the size cap.
    "markdown-it-py>=3.0,<4",
    "tiktoken>=0.8,<1",
    # Stream J.6.补强-4 (Mini-ADR J-34) — Pillow strips EXIF from
    # uploaded images on the way to the object store. Metadata exfil
    # (GPS / device / timestamps) is a low-cost zero-day attack
    # surface; strip cost < 100 LOC + transitive dep already pinned by
    # markitdown.
    "pillow>=12.0,<13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/control_plane"]
