[project]
name = "helix-agent-credential-proxy"
version = "0.0.0"
description = "Helix-Agent Credential Proxy — outbound secret injection (Stream F.5)."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
authors = [
    { name = "joneqian", email = "qian.qing0926@gmail.com" },
]
dependencies = [
    "helix-agent-common",
    "helix-agent-persistence",
    "helix-agent-protocol",
    # SecretStore — the proxy resolves secret refs through it (Mini-ADR F-7).
    "helix-agent-runtime",
    # M0 = aiohttp reverse proxy, server + outbound client (Mini-ADR F-6).
    "aiohttp>=3.10,<4",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy[asyncio]>=2.0.30,<3",
    "asyncpg>=0.29,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/credential_proxy"]
