[project]
name = "helix-agent-orchestrator"
version = "0.0.0"
description = "Helix-Agent orchestrator — LangGraph execution surface (Stream E)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "joneqian", email = "qian.qing0926@gmail.com" },
]
dependencies = [
    "helix-agent-common",
    "helix-agent-persistence",
    "helix-agent-protocol",
    "helix-agent-runtime",
    # Pin past CVE-2026-28277 (langgraph) + CVE-2025-64439 / 2026-27794 (langgraph-checkpoint).
    # Mirrors helix-runtime; pinned directly so pip-audit catches regression.
    "langgraph>=1.0.10",
    "langgraph-checkpoint>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]
