[project]
name = "helix-agent-orchestrator"
version = "0.0.0"
description = "Helix-Agent orchestrator — LangGraph execution surface (Stream E)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "joneqian", email = "qian.qing0926@gmail.com" },
]
dependencies = [
    "helix-agent-common",
    "helix-agent-persistence",
    "helix-agent-protocol",
    "helix-agent-runtime",
    # Pin past CVE-2026-28277 (langgraph) + CVE-2025-64439 / 2026-27794 (langgraph-checkpoint).
    # Mirrors helix-runtime; pinned directly so pip-audit catches regression.
    "langgraph>=1.0.10",
    "langgraph-checkpoint>=4.0.0",
    # E.7 web_search Tavily HTTP client (also reused by future E.8 HTTP tool).
    "httpx>=0.27,<1",
    # E.9 MCP stdio adapter — Anthropic official Python SDK.
    "mcp>=1.0,<2",
    # E.12 per-provider-key token bucket — wraps LLMProvider with an
    # async leaky bucket so over-limit calls await instead of bursting
    # into 429s and tripping the E.4 breaker.
    "aiolimiter>=1.1,<2",
    # HX-12 ranked deferred-tool retrieval (Mini-ADR HX-I1): BM25 over the
    # deferred pool + CJK-aware tokenization (jieba precedent: J.5 keyword
    # search in helix-persistence).
    "rank-bm25>=0.2,<1",
    "jieba>=0.42,<1",
    # 2.2 — runtime validation of tool_call args against ToolSpec.parameters
    # (the JSON Schema bound to the LLM) before dispatch.
    "jsonschema>=4.20,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]
